Finish .header by fixing align-items

--- a/style.css
+++ b/style.css
@@ -47,7 +47,7 @@ body {
 
 .header {
     display: flex;
-    align-items: center;
+    align-items: baseline;
     justify-content: space-between;
 }
 
